@@ -1,6 +1,10 @@
 2008-06-05  Eitan Isaacson  <eitan@ascender.com>
 
 	* macaroon/playback/keypress_actions.py (TypeAction._charType): 
+	  Query the default keymap for the proper keycode and level. If
+	  the level is 1, press shift.
+
+	* macaroon/playback/keypress_actions.py (TypeAction._charType): 
 	  Press "shift" if the character is uppercase, I don't know if
 	  this is a very localizable solution, but what the hell.
 
